修正無法多重顯示的問題

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,9 @@
 # Google Maps API Configuration
+# 前端用 (瀏覽器可見，需要網域限制保護)
 NEXT_PUBLIC_GOOGLE_API_KEY=your_google_maps_api_key_here
+
+# 後端用 (伺服器私有，不會暴露給瀏覽器)
+GOOGLE_API_KEY=your_google_maps_api_key_here
 
 # Google Maps Control Settings
 # 若不設定，將使用 Google Maps 預設值
